fixing page title on mobile - blog

--- a/backend/public/css/szu.css
+++ b/backend/public/css/szu.css
@@ -125,6 +125,10 @@ code {
     .logo{
         display: none;
     }
+
+    .site-title{
+        position: static;
+    }
 }
 
 /* END HEADER */
